--- a/index.html
+++ b/index.html
@@ -18,24 +18,31 @@
              <div id="btn-search" class="btn btn-primary ms-3">Search</div>
             </div>
           </section>
-
-
       <section>
+
+
         <!-- display search content -->
           <div id="phone-container" class="row row-cols-1 row-cols-md-3 g-4">
           </div>
-
           <div id="no-phone-text"  class="py-3 d-none">
             <h3 class="text-warning">No Phone Found.Please try again.</h3>
-
+          </div>
+          <div id="show-all" class="text-center mt-5 d-none">
+            <div id="btn-show-all" class="btn btn-primary">Show all</div>
+            
           </div>
       </section>
+
+
+      <!-- loader -->
+          <section id="loader" class="d-none">
+            <div style="height: 400px" class="d-flex justify-content-center align-items-center">
+              <div class="spinner-border text-success" role="status">
+                <span class="visually-hidden">Loading...</span>
+              </div>
+            </div>
+          </section>
     </main>
-
-
-
-
-
 
     <!-- script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
