text align added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Welcome to Phone Hunter!</h1>
+      <h1 class="fs-2 fw-bold text-center my-3 text-danger-emphasis">Welcome to Phone Hunter!</h1>
     </header>
     <main class="container">
           <section>
